--- a/components/accounts/build.gradle
+++ b/components/accounts/build.gradle
@@ -4,4 +4,5 @@ dependencies {
     compile "org.springframework:spring-jdbc:$springVersion"
 
     testCompile project(":components:test-support")
+    compile "com.netflix.hystrix:hystrix-javanica:1.5.18"
 }
